--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>
+      Edward Portfolio
+    </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
+   <p>
+     Edward coding 
+   </p>
+    <img id="sky" src="https://live.staticflickr.com/2702/4465318125_12da11ce7f_b.jpg"
+  alt="photo of the northern lights">
 
+    <!--"coding spot
+        https://creativecommons.org/licenses/by-sa/2.0/ -->
+
+  </body>
+</html>
