--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Edward's Art Portfolio</title>
+    <title>About Me</title>
 </head>
 <body>
     <header>
@@ -18,10 +18,12 @@
         </nav>
     </header>
     <main>
-        <section id="home">
-            <h1>Welcome to my Art Portfolio</h1>
-            <p>Showcasing my creative works.</p>
-            <p>As Artist we have no limits of improvment we can surpass our limits.</p>
+        <section id="about">
+            <h1>About Me</h1>
+            <img src="./edwardL9Klogo.png" width="200px" alt="profile pic">
+            <p> Hello My Name is Edward am a selfthough artist i like to draw, read and animated on my free time
+            and being selfthough it has taken me some time getting better at what i do so my main goal is to keep imporving sound 
+        simple but this best way for me to have appealing art to my audience hope you enjoy my art.</p>
         </section>
     </main>
     <footer>
