--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Edward's Art Portfolio</title>
+    <title>Contact</title>
 </head>
 <body>
     <header>
@@ -18,10 +18,10 @@
         </nav>
     </header>
     <main>
-        <section id="home">
-            <h1>Welcome to my Art Portfolio</h1>
-            <p>Showcasing my creative works.</p>
-            <p>As Artist we have no limits of improvment we can surpass our limits.</p>
+        <section>
+            <h1>Contact Me</h1>
+            <p>Feel free to reach out:</p>
+            <!-- Add your contact information or8 a contact form here -->
         </section>
     </main>
     <footer>
